manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: app
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
